<resources>
    <string name="app_name">SQLiteDemoApplication</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_name">Enter Name</string>
    <string name="load_data">Load Data</string>
    <string name="add">Add</string>
    <string name="data_list">Data List</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="find">Find</string>
</resources>